<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_insert_cd"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.kpizani.cds.InsertCD">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/songs_will_be_lost_if_you_later_change_album_name_make_sure_it_s_correct_before_adding_songs"/>

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/cd_title"
        android:importantForAutofill="no"
        android:inputType="text" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/artist"
        android:hint="@string/cd_artist"
        android:inputType="text"
        android:importantForAutofill="no" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/rating"
        android:hint="@string/cd_rating_1_5"
        android:inputType="text"
        android:importantForAutofill="no" />
    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/submit"
        android:id="@+id/sub"
        android:onClick="onClick"
        />
</LinearLayout>
